# shell-for-ytdlp

./: .gitignore  LICENSE  README.md  TODO-final.md  TODO.md  UI-for-ytdlp.spec  build.py  build.spec  main.py  pyproject.toml  requirements.txt  test_encoding.py  test_encoding_gui.py  test_ytdlp_encoding.py
.github/release-notes/: v0.2.0.md
.github/workflows/: build-shell-for-ytdlp.yml  build-ui-for-ytdlp.yml
core/: __init__.py  clipboard_monitor.py  config.py  deno_installer.py  downloader.py  icons.py  logger.py  notifications.py  sound_manager.py  theme.py  tray_manager.py  updater.py  utils.py
src/: build.spec
tests/: conftest.py
tests/unit/: test_clipboard_monitor.py  test_config.py  test_downloader.py  test_encoding.py  test_sound_manager.py  test_tray_manager.py  test_tray_minimize.py  test_updater.py  test_utils.py
ui/: __init__.py  layout_config.py  main_window.py  tooltip.py
ui/components/: __init__.py  cookies_dialog.py  log_viewer.py  progress_bar.py  settings_dialog.py  sponsorblock_dialog.py  url_input.py
