[tool.poetry]
name = "shell-for-ytdlp"
version = "0.1.0"
description = "Simple shell for ease of use ytdlp"
authors = ["Jawerka <eqwdsasd@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
